--- a/book-store/frontend/package.json
+++ b/book-store/frontend/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
+    "@stripe/react-stripe-js": "^3.7.0",
+    "@stripe/stripe-js": "^7.3.0",
+    "axios": "^1.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
